<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_square_mission</name>
  <version>1.0.0</version>
  <description>TurtleBot3 Autonomous Square Mission - ROS 1 Noetic</description>

  <maintainer email="student@example.com">student</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
</package>
